# SNN-TSP

./: .gitignore  CMakeLists.txt  Laptop.sln  Laptop.vcxproj  Laptop.vcxproj.filters  Mathematical Foundation.md  NumSpike_tend=10.000000.csv  NumSpike_tend=100.000000.csv  NumSpike_tend=100.000000_sa_on.csv  Performance_tend=0.500000.csv  Performance_tend=0.600000.csv  Performance_tend=10.000000.csv  Performance_tend=10.000000_sa_on.csv  Performance_tend=100.000000.csv  Performance_tend=100.000000_sa_on.csv  Performance_tend=3.000000.csv  Performance_tend=30.000000_sa_on.csv  Potential_TSP_ num_city=6 same_WTA_diff_cities= -0.200000 adj_WTA_same_cities= -0.200000 non_adj_WTA_same_cities= -0.200000tend= 0.010000.csv  Spike_TSP_ num_city=6 same_WTA_diff_cities= -0.200000 adj_WTA_same_cities= -0.200000 non_adj_WTA_same_cities= -0.200000tend= 0.010000.csv  Travel_TSP_ num_city=6 same_WTA_diff_cities= -0.200000 adj_WTA_same_cities= -0.200000 non_adj_WTA_same_cities= -0.200000tend= 0.010000.csv  Travel_tend=1.000000.csv  Travel_tend=10.000000.csv  Travel_tend=100.000000.csv  core.cpp  core.hpp  export.cpp  export.hpp  neuron.cpp  neuron_control.cpp  param.cpp  param.h  simulation_parameters.cpp  simulation_parameters.hpp  sm_core.hpp  sm_lfsr.hpp  smsim.hpp  spike.hpp  spike_control.cpp  spike_control.hpp  synapse.cpp  (+11 more)
.0/: settings.json
Debug/: Laptop.ilk  Laptop.vcxproj.FileListAbsolute.txt
Debug/Laptop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laptop.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
plot/: Makefile  main.py  plotFunctions.py  spike_raster.py
src/: CMakeLists.txt  CMakeSettings.json  sm_rng.hpp
src/chip/: CMakeLists.txt  core.cpp  core.h  lif_neuron.cpp  lif_neuron.h  neuron.cpp  neuron.h  neuron_layer.h  param.cpp  param.h  phase.h  potential.cpp  rng.cpp  rng.h  sim_params.test.json  simulator.cpp  spike.h  spike_magazine.h  spk.h  synapse.cpp  synapse.h  synapse_array.h
src/csp/: core.cpp  core.h  neuron.cpp  spike.hpp  synapse.cpp
src/tsp/: CMakeLists.txt  main.cpp  tsp.cpp  tsp.h  tsp.hpp  tsp_data.json  tsp_data_26.json
src/utils/: CMakeLists.txt  fs.h  np.h  py.h  utils.cpp  utils.h
x64/Debug/: Laptop.ilk  Laptop.vcxproj.FileListAbsolute.txt  vc142.idb
x64/Debug/Laptop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Laptop.lastbuildstate  Laptop.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
